Bug 463700 - Saving .po file hides sibling .pot files if a directory has only .pot files
Summary: Saving .po file hides sibling .pot files if a directory has only .pot files
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: wojnilowicz
URL:
Keywords: testcase
Depends on:
Blocks:
 
Reported: 2023-01-01 17:41 UTC by wojnilowicz
Modified: 2023-01-23 22:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test case (1.72 KB, application/gzip)
2023-01-01 17:41 UTC, wojnilowicz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wojnilowicz 2023-01-01 17:41:18 UTC
Created attachment 154941 [details]
Test case

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. unpack the attached zip file
2. open test-case-trunk.lokalize in Lokalize
3. double click on akonadi._desktop_.pot in Lokalize to open it
4. translate one translation unit
5. save it
6. switch back to "Project Overview" tab
7. expand akonadi node

OBSERVED RESULT
akonadi._desktop_.po visible
akonadi_knut_resource.pot not visible

EXPECTED RESULT
akonadi._desktop_.po visible
akonadi_knut_resource.pot visible

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-01-01 17:48:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/26
Comment 2 Albert Astals Cid 2023-01-23 22:39:56 UTC
Git commit e82a501113d305bc4184ee9156a121dcbdedbee6 by Albert Astals Cid, on behalf of Łukasz Wojniłowicz.
Committed on 23/01/2023 at 19:10.
Pushed by aacid into branch 'master'.

Reparent child nodes of pot directory instead of removing them

M  +23   -0    src/project/projectmodel.cpp

https://invent.kde.org/sdk/lokalize/commit/e82a501113d305bc4184ee9156a121dcbdedbee6