Reparent child nodes of pot directory instead of removing them

BUG: 463700